src/_mobile.scss
@use './index.scss' as global;
@use './mixins.scss' as mixins;

@mixin home-page-mobile(){
    .titled-paragraph  {
        flex-direction: column;
    }
    blockquote {
        font-family: 'grafier';
        font-size: 2rem;
        line-height: 120%;
        margin: 0;

    }
    .section.title {
        grid-row: 2 / span 10;
        .furniture {
            grid-column: 2/12;
            grid-row: 1/2;
            justify-content: space-between;
            .right {
                text-transform: uppercase;
                text-align: right;
            }
        }
        h1 {
            grid-column: 5/12;
            font-size: 3.7rem;
            grid-row: 4 / span 3;
            line-height: 110%;
            font-weight: 500;
        }
        .caption {
            grid-column: 7/12;
            grid-row: 7;
            font-size: 1.25rem;
        }
        img {
            grid-column: 1 / 6;
            grid-row: 3 / 9;
            width: 100%;
            height: 100%;
            object-fit: cover;
            object-position: 10%;
            z-index: -1;
        }
    }
    .section.intro {
        grid-row: span 12;
        .titled-paragraph, blockquote, .attribution {
            grid-column: 2/12;
        }
        .titled-paragraph {
            grid-row: span 5;
        }
        blockquote {
            grid-row: 7 / span 4;
        }
        .attribution {
            grid-row: 11;
            text-align: end;
        }
    }
    .section.experiment {
        grid-row: span 18;
        .titled-paragraph {
            grid-column: 2/12;
            grid-row: span 8;
        }
        img {
            width: 100%;
            object-fit: cover;
        }
        img:nth-of-type(1) {
            grid-column: 1/3;
            grid-row: 10;
        }
        img:nth-of-type(2) {
            grid-column: 3/6;
            grid-row: 11;
        }
        img:nth-of-type(3) {
            grid-column: 1/4;
            grid-row: 12;
            z-index: -1;
        }
        img:nth-of-type(4) {
            grid-column: 4/8;
            grid-row: 10;
            z-index: -1;
        }
        img:nth-of-type(5) {
            grid-column: -7/-3;
            grid-row: 12;
        }
        img:nth-of-type(6) {
            grid-column: 1/2;
            grid-row: 9;
            z-index: -1;
        }
        img:nth-of-type(7) {
            grid-column: -10/-8;
            grid-row: 13;
        }
        img:nth-of-type(8) {
            grid-column: -12/-9;
            grid-row: 14;
            z-index: -1;
        }
        img:nth-of-type(9) {
            grid-column: -8/-4;
            grid-row: 14;
        }
        img:nth-of-type(10) {
            grid-column: -5/-2;
            grid-row: 11;
        }
        img:nth-of-type(11){
            grid-column: -10/-8;
            grid-row: 16;
        }
        img:nth-of-type(12){
            grid-column: -5/-1;
            grid-row: 15;
            z-index: -1;
        }
        img:nth-of-type(13){
            grid-column: -4/-1;
            grid-row: 13;
        }
        img:nth-of-type(14){
            grid-column: -7/-5;
            grid-row: 17;
        }
        img:nth-of-type(15){
            grid-column: -4/-3;
            grid-row: 18;
        }
        img:nth-of-type(16){
            grid-column: -5/-4;
            grid-row: 10;
        }
        img:nth-of-type(17){
            grid-column: -3/-1;
            grid-row: 17;
        }
    }
}

